# WattiVahtiLogger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64  Dockerfile.release  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: lib.rs  models.rs
logger/: Cargo.toml
logger/configs/: test.yaml
logger/src/: app.rs  authmodels.rs  logging.rs  main.rs  metering.rs
logger/src/endpoints/: health.rs  mod.rs  post.rs
logger/src/settings/: config.rs  config_model.rs  mod.rs  time.rs
logger/src/storage/: mod.rs
logger/src/storage/influxdb/: influx.rs  mod.rs  price_data.rs  time_series_value.rs
logger/src/storage/timescaledb/: timescale.rs
node_auth/: .dockerignore  Dockerfile  package-lock.json  package.json
node_auth/src/: index.js
scripts/: consumption_views.sql  create_tables.sql  grafana.sql  production_views.sql
