[package]
name = "logger"
version = "0.1.0"
authors = ["miikaforma <miika.forma@codecontrol.fi>"]
description = "Library for logging the WattiVahti data"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "time"] }
chrono = "0.4"
chrono-tz = { version = "0.4", features = ["serde"] }
influxdb = { version = "0.5.1", features = ["derive"] }
dotenv = "0.15.0"
anyhow = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.64" }
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls", "blocking"] }
actix-web = "4"
mime = "0.3.16"

api = { path = "../api" }
